<resources>
    <string name="app_name">DialogFragment Example</string>
    <string name="git_branch">Git branch 3_onCreateDialog_fragment</string>
    <string name="button_text">Click me</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="dialog_title">Dialog Title</string>
    <string name="pos_button">Got it</string>
    <string name="neg_button">Cancel</string>
    <string name="dialog_message">I am a dialog created in onCreateDialog of a DialogFragment.</string>
    <string name="dialog_tag">dialog</string>
</resources>
