<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <!-- Manually imitate an entire AlertDialog layout -->
    <!-- See dialog specs on: https://material.google.com/components/dialogs.html#dialogs-specs -->

    <!-- Title and content -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="24dp"
        android:paddingRight="24dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/dialog_title"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:text="@string/dialog_message"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:fontFamily="sans-serif"
            android:hint="@string/password"
            />

    </LinearLayout>

    <!-- Action area -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:orientation="horizontal"
        android:padding="8dp"
        android:gravity="right"
        >

        <Button
            android:id="@+id/neg_button"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:background="@android:color/transparent"
            android:text="@string/neg_button"
            android:textColor="@color/colorAccent"
            />

        <Button
            android:id="@+id/pos_button"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginLeft="8dp"
            android:background="@android:color/transparent"
            android:text="@string/pos_button"
            android:textColor="@color/colorAccent"
            />

    </LinearLayout>

</LinearLayout>